# rendering

./: BSDF.cpp  BSDF.h  CMakeLists.txt  camera.cpp  camera.h  core.h  lightSource.cpp  lightSource.h  main.cpp  primitive.cpp  primitive.h  scene.cpp  scene.h  shape.cpp  shape.h  spectrum.cpp  spectrum.h
